# incubation/node-manager/models/collector.go
@@ -4,13 +4,9 @@ import "gorm.io/gorm"
 
 type Collector struct {
 	gorm.Model
-	Name                    string                   `json:"name"`
-	Details                 string                   `json:"details"`
-	OperatingSystem         string                   `json:"operating_system"`
-	Introduction            string                   `json:"introduction"`
-	CollectorConfigurations []CollectorConfiguration `gorm:"foreignKey:CollectorID"`
-}
-
-func (Collector) TableName() string {
-	return "collectors"
+	Name            string          `json:"name"`
+	Details         []byte          `json:"details"` // []byte to store Markdown content
+	OperatingSystem string          `json:"operating_system"`
+	Introduction    string          `json:"introduction"`
+	Configurations  []Configuration `gorm:"foreignKey:CollectorID"`
 }
